# MusiCore

./: .gitignore  LICENSE  pyproject.toml  setup.cfg  setup.py
MusiCore/: __init__.py
MusiCore/Player/: Player.py  Sound.py
MusiCore/Playlist/: _Playlist.py
MusiCore/Stream/: Stream.py
examples/: example.py
music/: PROVIDE YOUR OWN .wav FILES
src/MusiCore/: Player.py  Stream.py  __init__.py
src/MusiCore/Player/: Player.py  Sound.py
src/MusiCore/Playlist/: Path.py  _Playlist.py
src/MusiCore_Oui002.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
