[metadata]
name = MusiCore-Oui002
version = 0.0.6.2
author = https://github.com/Oui002
description = Music for playing wave files in buffers.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Oui002/MusiCore

classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License

[options]
package_dir = 
    = src
packages = find:

[options.packages.find]
where = src